--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,18 @@
     </dependency>
 
     <dependency>
+      <groupId>fr.xebia.extras</groupId>
+      <artifactId>selma</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>fr.xebia.extras</groupId>
+      <artifactId>selma-processor</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.nodemules.mediawiki</groupId>
       <artifactId>mediawiki-client</artifactId>
       <version>0.1.0-SNAPSHOT</version>
@@ -55,7 +67,6 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
