--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>jsoup</artifactId>
       <version>1.10.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.2</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>fr.xebia.extras</groupId>
@@ -63,10 +69,6 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
