--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,13 @@
 logging:
   level:
     com.nodemules: TRACE
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/wikimedia
+    username: postgres
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
