--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.5</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.nodemules.mediawiki</groupId>
       <artifactId>mediawiki-client</artifactId>
       <version>0.1.0-SNAPSHOT</version>
